--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 		<meta charset="utf-8">
 		<script type="text/javascript" src="js\main.js"></script>
 	</head>
-	<body>
+	<body onload="load()">
 		<h1> Minha Página</h1>
+		<button type="button" onclick="clicou()">Clique Aqui</button>
+		<p id="agradecimento" onclick="redirecionar()"></p>
+		<p id="hover" onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o Mouse Aqui</p>
+		<p id="hover2" onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o Mouse Aqui</p>	
+		<select onchange="funcaoChange(this)">
+			<option value="1">1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+		</select>
+
 	</body>
 </html>
